# jest-companion

./: .gitignore  Cargo.toml  README.md  default.project.json  dist-workspace.toml  drillbit.toml  mise.toml  plugin.luau
.zed/: settings.json
plugin/: hotReload.luau  init.server.luau  pathToInstance.luau
plugin/patch/: CoreScriptSyncService.luau  FileSystemService.luau  getDataModelService.luau
src/: cli.rs  config.rs  formatter.rs  log.rs  main.rs  output.rs  resolver.rs
