[package]
name = "jest-companion"
version = "0.1.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/jacktabscode/jest-companion"
repository = "https://github.com/jacktabscode/jest-companion"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
