[package]
name = "jest-companion"
version = "0.3.0-beta.4"
edition = "2024"
description = "Run jest-lua tests from the command line"
homepage = "https://github.com/jacktabscode/jest-companion"
repository = "https://github.com/jacktabscode/jest-companion"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
fs-err = { version = "3.1.3", features = ["tokio"] }
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
